# opereon

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  cargo-clean.sh  cargo-upgrade.sh  git-update.sh  integration-tests.sh  mods-cargo-upgrade.sh  mods-git-update.sh  system-tests.sh
.cargo/: config
_op-exec/: Cargo.toml
_op-exec/src/: config.rs
op-arena/: Cargo.toml
op-arena/src/: lib.rs
op-async/: Cargo.toml
op-async/src/: engine.rs  lib.rs  main.rs  operation.rs  progress.rs
op-cli/: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
op-cli/docker/: Dockerfile
op-cli/docker/.operon/config/: config.toml
op-cli/src/: cli_server.rs  commons.rs  daemon.rs  display.rs  main.rs  options.rs
op-cli/src/cli_client/: client.rs  mod.rs
op-cli/tests/: tests_root.rs
op-cli/tests/integration/: common.rs  mod.rs
op-cli/tests/resources/compose/: Dockerfile  docker-compose.yml
op-cli/tests/resources/compose/ares/ssh/: ssh_host_dsa_key  ssh_host_ecdsa_key  ssh_host_ecdsa_key.pub  ssh_host_ed25519_key.pub  ssh_host_key.pub  ssh_host_rsa_key.pub
op-cli/tests/resources/compose/zeus/ssh/: ssh_host_dsa_key  ssh_host_ecdsa_key.pub  ssh_host_ed25519_key.pub  ssh_host_key  ssh_host_rsa_key
op-cli/tests/resources/model/: .operc
op-cli/tests/resources/model/conf/hosts/: .operc  _default.yaml  ares.yaml  zeus.yaml
op-cli/tests/resources/model/conf/users/: .operc
op-cli/tests/resources/model/hosts_file/: _.yaml
op-cli/tests/resources/model/proc/hosts_file/: _.yaml
op-cli/tests/resources/model/proc/hosts_file/etc/: hosts
op-cli/tests/resources/model/proc/yum/: procs.yaml  yum-check.sh
op-cli/tests/system/: common.rs  mod.rs
op-core/: Cargo.toml
op-core/src/: config.rs  context.rs  lib.rs  outcome.rs  state.rs  utils.rs
op-core/src/exec/: mod.rs  rsync.rs
op-core/src/exec/command/: local.rs  ssh.rs
op-core/src/ops/: config.rs  mod.rs  model.rs  rsync.rs
op-core/src/ops/combinators/: mod.rs  parallel.rs  sequence.rs
op-core/src/ops/command/: local.rs  mod.rs  ssh.rs
op-core/src/ops/exec/: config.rs
op-core/src/proto/: group.rs  mod.rs
op-core/src/proto/exec/: args.rs  mod.rs
op-core/src/proto/proc/: mod.rs  proc.rs  step.rs  task.rs
op-core/src/services/: mod.rs  model_manager.rs
op-engine/: Cargo.toml
op-engine/src/: engine.rs  lib.rs  operation.rs  progress.rs
op-exec/: Cargo.toml
op-exec/src/: config.rs  lib.rs  utils.rs
op-exec/src/command/: config.rs  mod.rs
op-exec/src/command/ssh/: config.rs  dest.rs
op-exec/src/core/: engine.rs  error.rs  exec.rs  mod.rs  model.rs  model_manager.rs  resource.rs  scheduler.rs  work.rs
op-exec/src/core/op/: context.rs  mod.rs  outcome.rs  progress.rs
op-exec/src/core/op/impls/: config.rs  exec.rs  mod.rs  model.rs  parallel.rs  sequence.rs  work.rs
op-exec/src/core/op/impls/exec/: mod.rs  step.rs  task.rs
op-exec/src/exec/: config.rs  mod.rs
op-exec/src/exec/command/: config.rs  mod.rs
op-exec/src/exec/command/local/: config.rs  mod.rs
op-exec/src/exec/command/ssh/: config.rs  dest.rs  mod.rs  operations.rs
op-exec/src/exec/file/: config.rs  mod.rs
op-exec/src/exec/file/rsync/: compare.rs  copy.rs  mod.rs
op-exec/src/exec/template/: config.rs  mod.rs
op-exec/src/exec/template/kg/: mod.rs
op-exec/src/proto/: error.rs  group.rs  host.rs  mod.rs  user.rs
op-exec/src/proto/exec/: args.rs  mod.rs  proc.rs  run.rs  step.rs  task.rs
op-exec/src/proto/work/: action.rs  job.rs  mod.rs  work.rs
op-exec/test-data/src/dir/: inner file
op-exec/tests/: tests_root.rs
op-exec/tests/tests/: config.rs  mod.rs
op-exec/tests/tests/core/: mod.rs  model.rs
op-exec/tests/tests/operations/: mod.rs  model_init.rs
op-exec2/: Cargo.toml
op-exec2/src/: lib.rs  outcome.rs  utils.rs
op-exec2/src/command/: mod.rs
op-exec2/src/command/local/: config.rs  mod.rs
op-exec2/src/command/ssh/: mod.rs
op-exec2/src/exec/: rsync.rs
op-exec2/src/outlog/: mod.rs
op-exec2/src/rsync/: compare.rs  copy.rs  mod.rs
op-log/: Cargo.toml
op-log/src/: config.rs  file.rs  lib.rs  logger.rs  term.rs
op-model/: Cargo.toml
op-model/src/: config.rs  git.rs  lib.rs  load_file.rs  manifest.rs  metadata.rs  model.rs  update.rs
op-model/src/defs/: host.rs  mod.rs  scope.rs  user.rs
op-model/src/defs/proc/: mod.rs  proc.rs  run.rs  task.rs  watch.rs
op-model/src/ver/: mod.rs
op-model/test-data/: .gitignore
op-model/test-data/model2/: op.toml
op-model/test-data/model2/conf/hosts/: .operc
op-model/test-data/model2/conf/users/: jc.yaml  tkrym.yaml
op-model/test-data/model2/proc/hosts_file/: _.yaml
op-model/test-data/model2/proc/yum/: procs.yaml
op-model/tests/: tests_root.rs
op-model/tests/resources/model1/: .operc
op-model/tests/resources/model1/conf/hosts/: _default.yaml  fedora.yaml
op-model/tests/resources/model1/conf/users/: _default.yaml  example.yaml  example2.toml
op-model/tests/resources/model1/proc/hosts_file/: _.yaml
op-model/tests/tests/: config.rs  git.rs  load_file.rs  mod.rs  model.rs
op-model/tests/tests/defs/: host.rs  mod.rs  scope.rs  user.rs
op-model/tests/tests/defs/proc/: mod.rs  proc.rs  run.rs  task.rs  watch.rs
op-net/: Cargo.toml
op-net/src/: codec.rs  config.rs  connection.rs  discovery.rs  ifaces.rs  lib.rs  msgs.rs  node.rs  server.rs
op-rev/: Cargo.toml
op-rev/src/: lib.rs
op-rev/src/impls/: dir.rs  git.rs  mod.rs
op-rev/src/meta/: diff.rs  mod.rs  oid.rs  rev_info.rs  rev_path.rs
op-rev/tests/: tests_root.rs
op-rev/tests/tests/: git.rs  mod.rs
op-test-helpers/: Cargo.toml
op-test-helpers/src/: git.rs  lib.rs  node.rs
resources/: hosts_file.op  op-sshpass.sh
resources/.opereon/: README.md
resources/dev_env/: docker-compose.yml
resources/docker/: Dockerfile  docker-compose.yml
resources/files/: env_script.sh  example-script.sh
resources/model/: .gitignore  .operc  op.toml  restart-env.sh  ssh-into.sh  stop-env.sh
resources/model2/: op.toml
resources/vagrant/: Vagrantfile  install_vagrant.sh
rust-doc-parser/: Cargo.toml
rust-doc-parser/src/: main.rs
(+57 files in other folders)
