[workspace]
members = ["op-*"]
exclude = ["kg-*"]

[patch.crates-io]
kg-diag = { path = "kg-diag/kg-diag" }
kg-diag-derive = { path = "kg-diag/kg-diag-derive" }
kg-display = { path = "kg-display/kg-display" }
kg-display-derive = { path = "kg-display/kg-display-derive" }
kg-js = { path = "kg-js" }
kg-lang = { path = "kg-lang" }
kg-symbol = { path = "kg-symbol" }
kg-template = { path = "kg-template" }
kg-tree = { path = "kg-tree" }
kg-utils = { path = "kg-utils" }

