[package]
name = "op-async"
version = "0.1.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl", "Wiktor Sikora <wiktor.sikora@kodegenix.pl>"]
workspace = ".."
edition = "2018"

[dependencies]
kg-utils = "0.4.0"
tokio = "0.2.0-alpha.6"
uuid = { version = "0.8.0", features = ["v1", "v3", "v4", "v5", "serde"] }
serde = "1.0.101"
serde_derive = "1.0.101"
