[package]
name = "op-async"
version = "0.1.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl", "Wiktor Sikora <wiktor.sikora@kodegenix.pl>"]
workspace = ".."
edition = "2018"

[dependencies]
kg-utils = "0.4.0"
futures = "0.3.1"
tokio = { version = "0.2.9", features = ["full"] }
uuid = { version = "0.8.1", features = ["v1", "v3", "v4", "v5", "serde"] }
serde = "1.0.104"
serde_derive = "1.0.104"
rand = "0.7.3"
