[package]
name = "op-cli"
version = "0.1.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl", "Wiktor Sikora <wiktor.sikora@kodegenix.pl>"]
workspace = ".."
edition = "2018"
default-run = "op"
build = "build.rs"

[dependencies]
tracing= "0.1.21"
kg-diag = "0.4.0"
kg-tree = "0.2.1"
kg-utils = "0.4.0"
op-engine = { path= "../op-engine"}
op-core = { path = "../op-core" }
op-exec = { path = "../op-exec" }
op-rev = { path = "../op-rev" }
op-log = { path = "../op-log" }
structopt = "0.3.20"
futures = "0.3.8"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8.14"
toml = "0.5.7"
uuid = { version = "0.8.1", features = ["serde"] }
url = "2.2.0"
chrono = "0.4.19"
tokio = "0.3.3"

[features]
system-tests =[]

[dev-dependencies]
op-test-helpers = { version = "*", path = "../op-test-helpers" }
pretty_assertions = "0.6.1"
console = "0.13.0"

[[bin]]
name = "op"
path = "src/main.rs"

[[bin]]
name = "op-ask"
path = "src/bin/op-ask.rs"
