[package]
name = "op-cli"
version = "0.1.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl", "Wiktor Sikora <wiktor.sikora@kodegenix.pl>"]
workspace = ".."
edition = "2018"
default-run = "op"
build = "build.rs"

[dependencies]
tracing= "0.1.26"
kg-diag = "0.4.0"
kg-tree = "0.2.1"
kg-utils = "0.4.0"
op-engine = { path= "../op-engine"}
op-core = { path = "../op-core" }
op-exec = { path = "../op-exec" }
op-rev = { path = "../op-rev" }
op-log = { path = "../op-log" }
structopt = "0.3.21"
futures = "0.3.15"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["serde"] }
url = "2.2.2"
chrono = "0.4.19"
tokio = "1.7.1"

[features]
system-tests =[]

[dev-dependencies]
op-test-helpers = { version = "*", path = "../op-test-helpers" }
pretty_assertions = "0.7.2"
console = "0.14.1"

[[bin]]
name = "op"
path = "src/main.rs"

[[bin]]
name = "op-ask"
path = "src/bin/op-ask.rs"
