[package]
name = "op-core"
version = "0.1.0"
authors = ["Wiktor Sikora <wiktor.sikora@kodegenix.pl>"]
edition = "2018"

[dependencies]
kg-tree = "0.2.1"
kg-diag = "0.4.0"
kg-diag-derive = "0.4.0"
kg-display-derive = "0.1.1"
kg-utils = "0.4.0"
tracing= "0.1.19"
tracing-futures = "0.2.4"
op-engine = { path = "../op-engine" }
op-exec = { path = "../op-exec" }
op-log = { path = "../op-log" }
op-model = { path = "../op-model"}
op-rev = { path = "../op-rev" }
futures = { version = "0.3.5", features = ["async-await"] }
tokio = { version = "0.2.22", features = ["full"] }
lazy_static = "1.4.0"
serde = "1.0.115"
async-trait = "0.1.40"
shared_child = "0.3.4"
serde_derive = "1.0.115"
serde_json = "1.0.57"
serde_yaml = "0.8.13"
toml = "0.5.6"
libc = "0.2.76"
regex = "1.3.9"
chrono = "0.4.15"
