[package]
name = "op-core"
version = "0.1.0"
authors = ["Wiktor Sikora <wiktor.sikora@kodegenix.pl>"]
edition = "2018"

[dependencies]
kg-tree = "0.2.1"
kg-diag = "0.4.0"
kg-diag-derive = "0.4.0"
kg-display-derive = "0.1.1"
kg-utils = "0.4.0"
tracing= "0.1.26"
tracing-futures = "0.2.5"
op-engine = { path = "../op-engine" }
op-exec = { path = "../op-exec" }
op-log = { path = "../op-log" }
op-model = { path = "../op-model"}
op-rev = { path = "../op-rev" }
futures = { version = "0.3.15", features = ["async-await"] }
tokio = { version = "1.7.1", features = ["full"] }
lazy_static = "1.4.0"
serde = "1.0.126"
async-trait = "0.1.50"
shared_child = "0.3.5"
serde_derive = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"
libc = "0.2.97"
regex = "1.5.4"
chrono = "0.4.19"
