[package]
name = "op-exec"
version = "0.1.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
workspace = ".."
edition = "2018"

[dependencies]
kg-diag = "0.4.0"
kg-diag-derive = "0.4.0"
kg-display-derive = "0.1.1"
kg-utils = "0.4.0"
kg-tree = "0.2.1"
kg-template = "0.1.2"
kg-symbol= "0.2.0"
kg-lang = "0.1.1"
op-model = { path = "../op-model" }
op-rev = { path = "../op-rev" }
op-log = { path = "../op-log" }
tokio = { version = "0.2.22", features = ["full"] }
pin-project = "0.4.26"
futures = { version = "0.3.6", features = ["async-await"] }
os_pipe = "0.9.2"
time = "0.2.22"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
serde_yaml = "0.8.13"
toml = "0.5.6"
rmp-serde = "0.14.4"
libc = "0.2.79"
regex = "1.3.9"
uuid = { version = "0.8.1", features = ["v1", "v3", "v4", "v5", "serde"] }
bytes = "0.5.6"
lazy_static = "1.4.0"
rand = "0.7.3"
walkdir = "2.3.1"
users = "0.10.0"
url = "2.1.1"
git2 = "0.13.11"
parking_lot = "0.11.0"
rexpect = "0.4.0"
shared_child = "0.3.4"

[dev-dependencies]
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
op-test-helpers = { version = "0.1.0", path = "../op-test-helpers" }
