[package]
name = "op-exec"
version = "0.1.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
workspace = ".."
edition = "2018"

[dependencies]
kg-diag = "0.4.0"
kg-diag-derive = "0.4.0"
kg-display-derive = "0.1.1"
kg-utils = "0.4.0"
kg-tree = "0.2.1"
kg-template = "0.1.2"
kg-symbol= "0.2.0"
kg-syntax = "0.3.0"
op-model = { path = "../op-model" }
op-rev = { path = "../op-rev" }
op-log = { path = "../op-log" }
tokio = { version = "1.2.0", features = ["full"] }
pin-project = "1.0.5"
futures = { version = "0.3.12", features = ["async-await"] }
os_pipe = "0.9.2"
time = "0.2.25"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
serde_yaml = "0.8.17"
toml = "0.5.8"
rmp-serde = "0.15.4"
libc = "0.2.86"
regex = "1.4.3"
uuid = { version = "0.8.2", features = ["v1", "v3", "v4", "v5", "serde"] }
bytes = "1.0.1"
lazy_static = "1.4.0"
rand = "0.8.3"
walkdir = "2.3.1"
users = "0.11.0"
url = "2.2.0"
git2 = "0.13.17"
parking_lot = "0.11.1"
rexpect = "0.4.0"
shared_child = "0.3.4"

[dev-dependencies]
tempfile = "3.2.0"
pretty_assertions = "0.6.1"
op-test-helpers = { version = "0.1.0", path = "../op-test-helpers" }
