[package]
name = "op-exec2"
version = "0.1.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
workspace = ".."
edition = "2018"

[dependencies]
kg-diag = "0.4.0"
kg-diag-derive = "0.4.0"
kg-display-derive = "0.1.1"
kg-utils = "0.4.0"
kg-tree = "0.2.0"
kg-template = "0.1.2"
kg-symbol= "0.1.10"
kg-lang = "0.1.1"
op-model = { version = "0.1.1", path = "../op-model" }
op-async = { version = "0.1.1", path = "../op-async" }
op-rev = { version = "0.1.1", path = "../op-rev" }
op-log = { version = "0.1.0", path = "../op-log" }
tokio = { version = "0.2.21", features = ["full"] }
async-trait = "0.1.36"
pin-project = "0.4.17"
futures = {version ="0.3.5", features = ["async-await"]}
os_pipe = "0.9.2"
time = "0.2.16"
chrono = { version = "0.4.11", features = ["serde"] }
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
serde_yaml = "0.8.12"
toml = "0.5.6"
rmp-serde = "0.14.3"
libc = "0.2.71"
regex = "1.3.7"
uuid = { version = "0.8.1", features = ["v1", "v3", "v4", "v5", "serde"] }
bytes = "0.5.4"
lazy_static = "1.4.0"
rand = "0.7.3"
walkdir = "2.3.1"
slog = "2.5.2"
users = "0.10.0"
url = "2.1.1"
git2 = "0.13.6"
parking_lot = "0.10.2"
rexpect = "0.3.0"
shared_child = "0.3.4"

[dev-dependencies]
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
op-test-helpers = { version = "0.1.0", path = "../op-test-helpers" }
