[package]
name = "op-log"
version = "0.1.0"
authors = ["Wiktor Sikora <wiktor.sikora@kodegenix.pl>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber="0.2"

slog = "2.5.2"
#slog-term = "2.4.1"
#slog-async = "2.3.0"
slog-kvfilter = "0.7.0"
colored = "1.9.3"
slog-bunyan = "2.2.0"
lazy_static = "1.4.0"
serde = "1.0.110"
serde_derive = "1.0.110"
