[package]
name = "op-model"
version = "0.1.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
workspace = ".."
edition = "2018"

[dependencies]
kg-diag = "0.4.0"
kg-utils = "0.4.0"
kg-tree = "0.2.0"
kg-symbol = "0.1.10"
kg-display = "0.1.2"
kg-display-derive = "0.1.1"
kg-diag-derive = "0.4.0"
op-rev = { version = "0.1.1", path = "../op-rev" }
tracing = "0.1"
slog = "2.5.2"
libc = "0.2.71"
walkdir = "2.3.1"
globset = "0.4.5"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
serde_yaml = "0.8.12"
toml = "0.5.6"
heapsize = "0.4.2"
parking_lot = "0.10.2"

[dev-dependencies]
indoc = "0.3.5"
difference = "2.0.0"
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
op-test-helpers = { version = "0.1.0", path = "../op-test-helpers" }
