[package]
name = "op-model"
version = "0.1.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
workspace = ".."
edition = "2018"

[dependencies]
kg-diag = "0.4.0"
kg-utils = "0.4.0"
kg-tree = "0.2.1"
kg-symbol = "0.2.0"
kg-display = "0.1.2"
kg-display-derive = "0.1.1"
kg-diag-derive = "0.4.0"
op-rev = { path = "../op-rev" }
tracing= "0.1.23"
libc = "0.2.86"
walkdir = "2.3.1"
globset = "0.4.6"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
serde_yaml = "0.8.17"
toml = "0.5.8"
heapsize = "0.4.2"
parking_lot = "0.11.1"

[dev-dependencies]
indoc = "1.0.3"
difference = "2.0.0"
tempfile = "3.2.0"
pretty_assertions = "0.6.1"
op-test-helpers = { version = "0.1.0", path = "../op-test-helpers" }
