[package]
name = "op-test-helpers"
version = "0.1.0"
authors = ["Wiktor Sikora <wiktor.sikora@kodegenix.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.2.0"
kg-tree = "0.2.1"
copy_dir = "0.1.2"
git2 = "0.13.20"
